Navbar reacts on scrollup (later improve timeout). Navbar language and burger menu  are now smaller on mobile. Added padding for dropdown menu. Fixed styling issues on homepage

--- a/website/index.css
+++ b/website/index.css
@@ -51,16 +51,7 @@
   }
 }
 
-/* SETTING CLAMPS (unavailable without extra plugins) */
-@layer components {
-  .imgTextGap {
-    column-gap: clamp(1rem, 4vw, 6rem);
-  }
 
-  .buttonClamp {
-    column-gap: clamp(1rem, 6vw, 4rem);
-  }
-}
 
 
 
